--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,9 @@
     "prettier"
   ],
   "rules": {
+    "react/jsx-one-expression-per-line": "off",
+    "react/jsx-props-no-spreading": "off",
+    "react/prop-types": "off",
     "no-use-before-define":"off",
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
